--- a/SimpleGallery/Info.plist
+++ b/SimpleGallery/Info.plist
@@ -37,5 +37,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Need access to your Photo Library</string>
 </dict>
 </plist>
